--- a/src/Compilers/Core/Portable/CodeAnalysisResources.resx
+++ b/src/Compilers/Core/Portable/CodeAnalysisResources.resx
@@ -392,6 +392,10 @@
   </data>
   <data name="CompilerAnalyzerFailure" xml:space="preserve">
     <value>Analyzer Failure</value>
+    <comment>{0}: Analyzer name
+{1}: Type name
+{2}: Localized exception message
+{3}: Localized detail message</comment>
   </data>
   <data name="CompilerAnalyzerThrows" xml:space="preserve">
     <value>Analyzer '{0}' threw an exception of type '{1}' with message '{2}'.
@@ -681,5 +685,6 @@
   </data>
   <data name="DisableAnalyzerDiagnosticsMessage" xml:space="preserve">
     <value>Suppress the following diagnostics to disable this analyzer: {0}</value>
+    <comment>{0}: Comma-separated list of diagnostic IDs</comment>
   </data>
 </root>
