--- a/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
+++ b/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
@@ -674,6 +674,6 @@
     <comment>{Locked="for"} "for" is a C# keyword and should not be localized.</comment>
   </data>
   <data name="Add_Explicit_Cast" xml:space="preserve">
-    <value>Add Explicit Cast</value>
+    <value>Add explicit cast</value>
   </data>
 </root>
