--- a/src/VisualStudio/Core/Def/xlf/ServicesVSResources.pt-BR.xlf
+++ b/src/VisualStudio/Core/Def/xlf/ServicesVSResources.pt-BR.xlf
@@ -114,7 +114,7 @@
       </trans-unit>
       <trans-unit id="Current_document">
         <source>Current document</source>
-        <target state="new">Current document</target>
+        <target state="translated">Documento atual</target>
         <note />
       </trans-unit>
       <trans-unit id="Element_is_not_valid">
@@ -124,7 +124,7 @@
       </trans-unit>
       <trans-unit id="Entire_solution">
         <source>Entire solution</source>
-        <target state="new">Entire solution</target>
+        <target state="translated">Solução Inteira</target>
         <note />
       </trans-unit>
       <trans-unit id="Evaluating_0_tasks_in_queue">
@@ -374,7 +374,7 @@
       </trans-unit>
       <trans-unit id="Open_documents">
         <source>Open documents</source>
-        <target state="new">Open documents</target>
+        <target state="translated">Abrir documentos</target>
         <note />
       </trans-unit>
       <trans-unit id="Parameter_preferences_colon">
@@ -936,7 +936,7 @@ Use a lista suspensa para exibir e mudar entre outros projetos aos quais este ar
       </trans-unit>
       <trans-unit id="Extract_Interface">
         <source>Extract Interface</source>
-        <target state="translated">Extrair Interface</target>
+        <target state="translated">Extrair a Interface</target>
         <note />
       </trans-unit>
       <trans-unit id="Generated_name_colon">
