--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.zh-Hans.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.zh-Hans.xlf
@@ -54,7 +54,7 @@
       </trans-unit>
       <trans-unit id="Error_reading_content_of_source_file_0_1">
         <source>Error reading content of source file '{0}' -- '{1}'.</source>
-        <target state="translated">读取源文件“{0}”--“{1}”的内容时出错。</target>
+        <target state="translated">读取源文件“{0}”中的内容时出错 -“{1}”。</target>
         <note />
       </trans-unit>
       <trans-unit id="Expression_level_preferences">
