--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1419,4 +1419,30 @@ I agree to all of the foregoing:</value>
     <value>Index</value>
     <comment>Index of parameter in original signature</comment>
   </data>
+  <data name="IntroduceUndefinedTodoVariables" xml:space="preserve">
+    <value>Introduce undefined TODO variables</value>
+    <comment>"TODO" is an indicator that more work should be done at the location where the TODO is inserted</comment>
+  </data>
+  <data name="Omit_only_for_optional_parameters" xml:space="preserve">
+    <value>Omit (only for optional parameters)</value>
+  </data>
+  <data name="Optional_with_default_value_colon" xml:space="preserve">
+    <value>Optional with default value:</value>
+  </data>
+  <data name="Parameter_kind_colon" xml:space="preserve">
+    <value>Parameter kind:</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>Required</value>
+  </data>
+  <data name="Use_named_argument" xml:space="preserve">
+    <value>Use named argument</value>
+    <comment>"argument" is a programming term for a value passed to a function</comment>
+  </data>
+  <data name="Value_colon" xml:space="preserve">
+    <value>Value:</value>
+  </data>
+  <data name="Value_to_inject_at_call_sites_colon" xml:space="preserve">
+    <value>Value to inject at call sites:</value>
+  </data>
 </root>
