--- a/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
+++ b/src/Features/CSharp/Portable/CSharpFeaturesResources.resx
@@ -673,7 +673,10 @@
     <value>Reverse 'for' statement</value>
     <comment>{Locked="for"} "for" is a C# keyword and should not be localized.</comment>
   </data>
-  <data name="Add_Explicit_Cast" xml:space="preserve">
+  <data name="Add_explicit_cast" xml:space="preserve">
     <value>Add explicit cast</value>
+  </data>
+  <data name="Convert_type_to_0" xml:space="preserve">
+    <value>Convert type to '{0}'</value>
   </data>
 </root>
