--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1759,4 +1759,7 @@ This version used in: {2}</value>
   <data name="Make_member_static" xml:space="preserve">
     <value>Make static</value>
   </data>
+  <data name="Implement_remaining_members_of_interface_explicitly" xml:space="preserve">
+    <value>Implement remaining members of interface explicitly</value>
+  </data>
 </root>
